# bugyo-cloud-client

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
bugyocloudclient/: __init__.py  __version__.py  authinfo.py  bugyocloudclient.py  config.py  core.py
bugyocloudclient/endpoints/: authenticate.py  checkauthenticationmethod.py  loginpage.py  loginpageparser.py  punchmarkpage.py  timeclock.py  toppage.py
bugyocloudclient/endpoints/base/: tokenpage.py
bugyocloudclient/models/: clientparam.py  punchinfo.py
bugyocloudclient/tasks/: abtask.py  basetask.py  logintask.py  punchtask.py
bugyocloudclient/utils/: baserequest.py  formpostrequest.py  getrequest.py  loginpageparser.py  pagetokenparser.py  urlproducer.py
scripts/: sample.py
test/: test_bugyocloudclient.py
tests/: test_bugyocloudclient.py
tests/endpoints/: test_authenticate.py  test_checkauthenticationmethod.py  test_loginpage.py  test_loginpageparser.py  test_punchmarkpage.py  test_timeclock.py  test_toppage.py
tests/tasks/: test_logintask.py  test_punchtask.py
tests/utils/: test_loginpageparser.py  test_pagetokenparser.py
